--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="Rock">Rock</button>
+    <button id="Scizor">Scizor</button>
+    <button id="Paper">Paper</button>
+    <div id="results">
+        <h2>Results</h2>
+        <p id="message"></p>
+        <p id="score">Current Score: Human 0 - Computer 0</p>
+        <p id="winner"></p>
+      </div>
     <script src="script.js"></script>
 </body>
 </html>
